# my-horse-scraper

./: .gitignore  README.md  data.sqlite  init_db.py  inspect_races.py  pyproject.toml  race_data_log.csv  race_runners_log.csv  requirements.txt  sitecustomize.py  test_balance_extraction.py  test_real_race.py  test_runner_extraction.py
.github/workflows/: race-log-stale-alert.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
app/: api.py  asgi.py  config.py  db.py  git_operations.py  main.py  models.py  scheduler.py  scheduler_refresh.py
app/scrapers/: daily.py  race.py
app/static/: bookmarklet.js
test_output/: runners_test_20250602_131619.csv  runners_test_20250602_131619.json
tests/: test_smoke.py
