[tool.poetry]
name = "horse-racing-scraper"
version = "0.1.0"
description = "Automatic scraper for Unibet horse racing data"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
apscheduler = "^3.10.4"
playwright = "^1.44.0"
python-dotenv = "^1.0.1"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.5"
ruff = "^0.4.2"
black = "^24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"